--- a/task11.ui
+++ b/task11.ui
@@ -1015,7 +1015,7 @@ QSizeGrip
      <rect>
       <x>20</x>
       <y>583</y>
-      <width>441</width>
+      <width>451</width>
       <height>51</height>
      </rect>
     </property>
@@ -1023,38 +1023,106 @@ QSizeGrip
      <string>Browse</string>
     </property>
    </widget>
-   <widget class="QLabel" name="Image_label">
+   <widget class="QGroupBox" name="groupBox">
+    <property name="geometry">
+     <rect>
+      <x>490</x>
+      <y>20</y>
+      <width>381</width>
+      <height>301</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Normal Image</string>
+    </property>
+    <widget class="QTableWidget" name="Normal_tableWidget">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>30</y>
+       <width>381</width>
+       <height>271</height>
+      </rect>
+     </property>
+     <column>
+      <property name="text">
+       <string>Property</string>
+      </property>
+      <property name="foreground">
+       <brush brushstyle="NoBrush">
+        <color alpha="255">
+         <red>0</red>
+         <green>0</green>
+         <blue>0</blue>
+        </color>
+       </brush>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Value</string>
+      </property>
+     </column>
+    </widget>
+   </widget>
+   <widget class="QGroupBox" name="groupBox_2">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>20</y>
-      <width>441</width>
-      <height>551</height>
+      <y>10</y>
+      <width>451</width>
+      <height>561</height>
      </rect>
     </property>
-    <property name="text">
-     <string/>
+    <property name="title">
+     <string>Image</string>
     </property>
+    <widget class="QLabel" name="Image_label">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>30</y>
+       <width>451</width>
+       <height>531</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+    </widget>
    </widget>
-   <widget class="QTableWidget" name="Readings_tableWidget">
+   <widget class="QGroupBox" name="groupBox_3">
     <property name="geometry">
      <rect>
-      <x>480</x>
-      <y>20</y>
-      <width>391</width>
-      <height>611</height>
+      <x>490</x>
+      <y>330</y>
+      <width>381</width>
+      <height>291</height>
      </rect>
     </property>
-    <column>
-     <property name="text">
-      <string>Reading</string>
+    <property name="title">
+     <string>Dicom Image</string>
+    </property>
+    <widget class="QTableWidget" name="Dicom_tableWidget">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>30</y>
+       <width>381</width>
+       <height>261</height>
+      </rect>
      </property>
-    </column>
-    <column>
-     <property name="text">
-      <string>Value</string>
-     </property>
-    </column>
+     <column>
+      <property name="text">
+       <string>Property</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>Value</string>
+      </property>
+     </column>
+    </widget>
    </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
