--- a/Task2222.ui
+++ b/Task2222.ui
@@ -1087,7 +1087,7 @@ QSizeGrip
     <item row="0" column="0">
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>1</number>
+       <number>0</number>
       </property>
       <property name="elideMode">
        <enum>Qt::ElideMiddle</enum>
@@ -1209,7 +1209,7 @@ QSizeGrip
                  <string/>
                 </property>
                 <property name="scaledContents">
-                 <bool>true</bool>
+                 <bool>false</bool>
                 </property>
                </widget>
               </item>
@@ -1228,7 +1228,7 @@ QSizeGrip
                  <string/>
                 </property>
                 <property name="scaledContents">
-                 <bool>true</bool>
+                 <bool>false</bool>
                 </property>
                 <property name="margin">
                  <number>0</number>
