--- a/Task22.ui
+++ b/Task22.ui
@@ -1397,7 +1397,7 @@ QSizeGrip
           </property>
           <layout class="QGridLayout" name="gridLayout_6">
            <item row="2" column="1">
-            <widget class="MplWidget" name="Original_Image_graphicsView">
+            <widget class="MplWidget" name="Original_Histogram_graphicsView">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                <horstretch>0</horstretch>
@@ -1407,7 +1407,7 @@ QSizeGrip
             </widget>
            </item>
            <item row="2" column="0">
-            <widget class="MplWidget" name="graphicsView">
+            <widget class="MplWidget" name="Original_Image_graphicsView">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
                <horstretch>0</horstretch>
@@ -1438,6 +1438,9 @@ QSizeGrip
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
+             </property>
+             <property name="viewportUpdateMode">
+              <enum>QGraphicsView::BoundingRectViewportUpdate</enum>
              </property>
             </widget>
            </item>
